Fix resume overlay height on mobile

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="navbar">
       <div class="logo">
         <h1>LEA ABDALLAH</h1>
-        <p>PORTFOLIO’25</p>
+        <p>PORTFOLIO’26</p>
       </div>
       <nav>
         <ul>
@@ -203,11 +203,13 @@
             <div class="resume-block">
               <h3>Projects</h3>
               <p>
-                Plan It - Assignment Deadline Manager – Full-Stack Web
-                Application<br />
-                Twitter Sentiment Analysis – Machine Learning Project<br />
-                Nova – AI Personal Assistant Chatbot<br />
-                FIFA 23 Data Analysis
+                <strong>Plan It </strong>- Assignment Deadline Manager –
+                Full-Stack Web Application<br />
+                <strong>Sentiment Analysis</strong> – Machine Learning
+                Project<br />
+                <strong>Nova</strong> – AI Personal Assistant Chatbot<br />
+                <strong>FIFA 23 Data Analysis</strong> – Power BI
+                Visualization<br />
               </p>
             </div>
           </div>
